--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,7 @@ on:
       - 'v*'
       - '*.zip'
       - '*.md'
-      - 'newcustomer-discount.php'
+      - 'ncd_wp.php'
       - 'readme.txt'
 
 jobs:
@@ -32,7 +32,7 @@ jobs:
       - name: Get current version
         id: current_version
         run: |
-          CURRENT_VERSION=$(grep -Po "Version: \K[0-9]+\.[0-9]+\.[0-9]+" newcustomer-discount.php)
+          CURRENT_VERSION=$(grep -Po "Version: \K[0-9]+\.[0-9]+\.[0-9]+" ncd_wp.php)
           echo "CURRENT_VERSION=$CURRENT_VERSION" >> $GITHUB_OUTPUT
           echo "Aktuelle Version: $CURRENT_VERSION"
 
@@ -53,8 +53,8 @@ jobs:
           echo "Aktualisiere Version auf: $VERSION"
           
           # Update Plugin-Datei
-          sed -i "s/Version: .*$/Version: $VERSION/" newcustomer-discount.php
-          sed -i "s/define('NCD_VERSION'.*/define('NCD_VERSION', '$VERSION');/" newcustomer-discount.php
+          sed -i "s/Version: .*$/Version: $VERSION/" ncd_wp.php
+          sed -i "s/define('NCD_VERSION'.*/define('NCD_VERSION', '$VERSION');/" ncd_wp.php
           
           # Update readme.txt falls vorhanden
           if [ -f "readme.txt" ]; then
@@ -65,7 +65,7 @@ jobs:
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          git add newcustomer-discount.php
+          git add ncd_wp.php
           git add readme.txt || true
           git commit -m "chore: update version to ${{ steps.new_version.outputs.NEW_VERSION }}"
           git push
@@ -92,7 +92,7 @@ jobs:
       - name: Get current version
         id: current_version
         run: |
-          CURRENT_VERSION=$(grep -Po "Version: \K[0-9]+\.[0-9]+\.[0-9]+" newcustomer-discount.php)
+          CURRENT_VERSION=$(grep -Po "Version: \K[0-9]+\.[0-9]+\.[0-9]+" ncd_wp.php)
           echo "CURRENT_VERSION=$CURRENT_VERSION" >> $GITHUB_OUTPUT
           echo "Aktuelle Version: $CURRENT_VERSION"
 
@@ -120,8 +120,8 @@ jobs:
           VERSION=${{ steps.new_version.outputs.NEW_VERSION }}
           echo "Aktualisiere Version auf: $VERSION"
           
-          sed -i "s/Version: .*$/Version: $VERSION/" newcustomer-discount.php
-          sed -i "s/define('NCD_VERSION'.*/define('NCD_VERSION', '$VERSION');/" newcustomer-discount.php
+          sed -i "s/Version: .*$/Version: $VERSION/" ncd_wp.php
+          sed -i "s/define('NCD_VERSION'.*/define('NCD_VERSION', '$VERSION');/" ncd_wp.php
           
           if [ -f "readme.txt" ]; then
             sed -i "s/Stable tag: .*$/Stable tag: $VERSION/" readme.txt
@@ -215,7 +215,7 @@ jobs:
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           
-          git add newcustomer-discount.php
+          git add ncd_wp.php
           git add readme.txt || true
           
           git commit -m "chore: update version to ${{ steps.new_version.outputs.NEW_VERSION }}"
